<resources>
    <string name="app_name">My Library</string>
    <string name="app_icon">App icon</string>
    <string name="my_library">My Library</string>
    <string name="show_all_books">Show All Books</string>
    <string name="currently_reading_books">Currently Reading Books</string>
    <string name="already_read_books">Already Read Books</string>
    <string name="see_your_favourites">See Your Favourites</string>
    <string name="about">About</string>
    <string name="developed_by_sakr">Developed By Sakr</string>
    <string name="want_to_read">Want To Read</string>
    <string name="book_image">Book Image</string>
    <string name="book_name">Book Name</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="author_label">Author</string>
    <string name="shot_description_label">Short description</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="delete">Delete</string>
    <string name="long_description">Long Description</string>
    <string name="pages">Pages :  </string>
    <string name="currently_reading">Currently reading</string>
    <string name="already_read">Already read</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="description">Description</string>

</resources>