<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_icon"
            android:src="@mipmap/ic_library" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/my_library"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAllBooks"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/show_all_books" />

        <Button
            android:id="@+id/btnCurrentlyReading"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/currently_reading_books" />

        <Button
            android:id="@+id/btnAlreadyRead"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/already_read_books" />


        <Button
            android:id="@+id/btnWantToRead"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/want_to_read" />

        <Button
            android:id="@+id/btnFavouriteBooks"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/see_your_favourites" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/about"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/txtLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/developed_by_sakr"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>